Remove background fixed because it doesn't work on ios

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,6 @@ body {
     /* min-height: 100vh; */
     background-image: url(images/chicken2.jpg);
     background-size: cover;
-    background-attachment: fixed;
     padding-top: 40px;
     padding-bottom: 40px;
 }
@@ -69,7 +68,6 @@ body {
     padding-bottom: 40px;
     background-image: url(images/pool2.jpeg);
     background-size: cover;
-    background-attachment: fixed;
 }
 
 h2 {
